--- a/myGame/index.html
+++ b/myGame/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>myGame</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
+    <title>myGame</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Press+Start+2P&family=VT323&display=swap"
+        rel="stylesheet">
 </head>
+
 <body style="overflow:hidden">
-<script src="src/main.js" type="module"></script>
+    <div id="orientation-warning"
+        style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.95); z-index:9999; justify-content:center; align-items:center; flex-direction:column; padding:20px; box-sizing:border-box;">
+        <div style="text-align:center; color:white; max-width:500px;">
+            <h1 style="font-size:24px; margin-bottom:20px; font-family: Arial, sans-serif;">⚠️ Screen Size Notice</h1>
+            <p style="font-size:18px; line-height:1.6; margin-bottom:20px; font-family: Arial, sans-serif;">
+                For the best gaming experience, please:
+            </p>
+            <ul
+                style="text-align:left; font-size:16px; line-height:1.8; margin-bottom:20px; font-family: Arial, sans-serif;">
+                <li>Use a tablet or laptop/desktop computer, OR</li>
+                <li>Rotate your mobile device to landscape mode (horizontal)</li>
+            </ul>
+            <p style="font-size:14px; color:#aaa; font-family: Arial, sans-serif;">
+                This game is optimized for wider screens.
+            </p>
+            <button id="skip-warning"
+                style="margin-top:20px; padding:12px 30px; font-size:16px; background:#ff69b4; color:white; border:none; border-radius:8px; cursor:pointer; font-family: Arial, sans-serif; font-weight:bold;">
+                Play Anyway
+            </button>
+        </div>
+    </div>
+
+    <script>
+        let userSkippedWarning = false;
+
+        function checkOrientation() {
+            const warning = document.getElementById('orientation-warning');
+            const isPortrait = window.innerHeight > window.innerWidth;
+            const isSmallScreen = window.innerWidth < 768;
+
+            if ((isPortrait || isSmallScreen) && !userSkippedWarning) {
+                warning.style.display = 'flex';
+            } else {
+                warning.style.display = 'none';
+            }
+        }
+
+        // Skip button handler
+        document.getElementById('skip-warning').addEventListener('click', function () {
+            userSkippedWarning = true;
+            document.getElementById('orientation-warning').style.display = 'none';
+        });
+
+        // Check on load
+        checkOrientation();
+
+        // Check on resize and orientation change
+        window.addEventListener('resize', checkOrientation);
+        window.addEventListener('orientationchange', checkOrientation);
+    </script>
+
+    <script src="src/main.js" type="module"></script>
 </body>
+
 </html>
